@@ -1,3 +1,8 @@
+2012-12-06 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * AODtoTAG_trf.py Implement event check for inputAODFile and outputTAGFile
+    * MergePool_trf.py Implement event check for input and output AOD/ESD files
+    * Tagging as PATJobTransforms-00-04-41
+
 2012-12-03 Graeme Stewart <graeme.andrew.stewart@cern.ch>
     * Reco_trf.py Add --extraignorefilter to LODPK
     * ProdSysDicTools.py Convert %2B to + in tag values returned from panda
